--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="welcome_user">Welcome %s!</string>
     <string name="click_create_post">Click the Create Post Button now and start log your life!</string>
     <string name="create_post">Create Post</string>
+    <string name="delete_post">Delete</string>
+    <string name="question_want_to_delete_post">Do you want to delete this post?</string>
     <string name="done">Done</string>
     <string name="photo">Photo</string>
     <string name="input_title">Title</string>
